--- a/Flujos por elementos.ipynb
+++ b/Flujos por elementos.ipynb
@@ -1565,6 +1565,245 @@
     "resultado.set_axis(ELEM_NOM, axis=1, inplace=True)\n",
     "resultado"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RAP - DMD</th>\n",
+       "      <th>RAP - SLR</th>\n",
+       "      <th>TR-1 SAL</th>\n",
+       "      <th>TR-2 SAL</th>\n",
+       "      <th>TR-1 RAP</th>\n",
+       "      <th>ENL SAL-AGS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>C12_23I-DH20H_SIN_Caso6_sTUX_OPF_1_sCDU3y4_sRGMCPY.sav</th>\n",
+       "      <td>625.664429</td>\n",
+       "      <td>609.309082</td>\n",
+       "      <td>62.357723</td>\n",
+       "      <td>62.357723</td>\n",
+       "      <td>239.480804</td>\n",
+       "      <td>1234.973511</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C12_23I-DH20H_SIN_Caso2_sTUX_OPF_1_sCDU3y4_sRGMCPY.sav</th>\n",
+       "      <td>626.163574</td>\n",
+       "      <td>611.158386</td>\n",
+       "      <td>60.413231</td>\n",
+       "      <td>60.413231</td>\n",
+       "      <td>243.630005</td>\n",
+       "      <td>1237.321960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C12_23I-DH20H_SIN_Caso2Hidro2_sTUX_OPF_1_sCDU3y4_sRGMCPY.sav</th>\n",
+       "      <td>634.965942</td>\n",
+       "      <td>619.143188</td>\n",
+       "      <td>60.510872</td>\n",
+       "      <td>60.510872</td>\n",
+       "      <td>244.088013</td>\n",
+       "      <td>1254.109131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C12_23I-DH20H_SIN_Caso4_sTUX_OPF_1_sCDU3y4_sRGMCPY.sav</th>\n",
+       "      <td>657.774292</td>\n",
+       "      <td>640.029541</td>\n",
+       "      <td>60.966606</td>\n",
+       "      <td>60.966606</td>\n",
+       "      <td>244.732758</td>\n",
+       "      <td>1297.803833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C12_23I-DH20H_SIN_Caso8_sTUX_OPF_1_sCDU3y4_sRGMCPY.sav</th>\n",
+       "      <td>661.173401</td>\n",
+       "      <td>641.277100</td>\n",
+       "      <td>62.822670</td>\n",
+       "      <td>62.822670</td>\n",
+       "      <td>241.501740</td>\n",
+       "      <td>1302.450500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C12_23I-DH20H_SIN_Caso4Hidro2_sTUX_OPF_1_sCDU3y4_sRGMCPY.sav</th>\n",
+       "      <td>667.986755</td>\n",
+       "      <td>649.277588</td>\n",
+       "      <td>61.110069</td>\n",
+       "      <td>61.110069</td>\n",
+       "      <td>245.149750</td>\n",
+       "      <td>1317.264343</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C12_23I-DH20H_SIN_Caso2_sTUX_OPF_1_sCDU3y4.sav</th>\n",
+       "      <td>709.185852</td>\n",
+       "      <td>685.133179</td>\n",
+       "      <td>63.225018</td>\n",
+       "      <td>63.225018</td>\n",
+       "      <td>244.207642</td>\n",
+       "      <td>1394.319031</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C12_23I-DH20H_SIN_Caso2_sTUX_OPF.sav</th>\n",
+       "      <td>713.693176</td>\n",
+       "      <td>688.885376</td>\n",
+       "      <td>63.246887</td>\n",
+       "      <td>63.246887</td>\n",
+       "      <td>245.343262</td>\n",
+       "      <td>1402.578552</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C12_23I-DH20H_SIN_Caso6_sTUX_OPF_1.sav</th>\n",
+       "      <td>714.399170</td>\n",
+       "      <td>688.352783</td>\n",
+       "      <td>64.632034</td>\n",
+       "      <td>64.632034</td>\n",
+       "      <td>242.601898</td>\n",
+       "      <td>1402.751953</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C12_23I-DH20H_SIN_Caso4Hidro2_sTUX_OPF_1_sCDU3y4.sav</th>\n",
+       "      <td>713.489502</td>\n",
+       "      <td>689.444946</td>\n",
+       "      <td>62.739128</td>\n",
+       "      <td>62.739128</td>\n",
+       "      <td>245.999878</td>\n",
+       "      <td>1402.934448</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C12_23I-DH20H_SIN_Caso4_sTUX_OPF_1.sav</th>\n",
+       "      <td>713.793152</td>\n",
+       "      <td>689.275818</td>\n",
+       "      <td>62.840832</td>\n",
+       "      <td>62.840832</td>\n",
+       "      <td>245.888184</td>\n",
+       "      <td>1403.068970</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C12_23I-DH20H_SIN_Caso6_sTUX_OPF_1_sCDU3y4.sav</th>\n",
+       "      <td>714.605408</td>\n",
+       "      <td>688.504395</td>\n",
+       "      <td>64.732689</td>\n",
+       "      <td>64.732689</td>\n",
+       "      <td>242.552917</td>\n",
+       "      <td>1403.109802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C12_23I-DH20H_SIN_Caso8_sTUX_OPF_1.sav</th>\n",
+       "      <td>714.800293</td>\n",
+       "      <td>688.346558</td>\n",
+       "      <td>64.881828</td>\n",
+       "      <td>64.881828</td>\n",
+       "      <td>241.547821</td>\n",
+       "      <td>1403.146851</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C12_23I-DH20H_SIN_Caso4_sTUX_OPF_1_sCDU3y4.sav</th>\n",
+       "      <td>713.770447</td>\n",
+       "      <td>689.555481</td>\n",
+       "      <td>62.906273</td>\n",
+       "      <td>62.906273</td>\n",
+       "      <td>245.751007</td>\n",
+       "      <td>1403.325928</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C12_23I-DH20H_SIN_Caso8_sTUX_OPF_1_sCDU3y4.sav</th>\n",
+       "      <td>714.842529</td>\n",
+       "      <td>688.858582</td>\n",
+       "      <td>64.533638</td>\n",
+       "      <td>64.533638</td>\n",
+       "      <td>242.751190</td>\n",
+       "      <td>1403.701111</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                     RAP - DMD   RAP - SLR  \\\n",
+       "C12_23I-DH20H_SIN_Caso6_sTUX_OPF_1_sCDU3y4_sRGM...  625.664429  609.309082   \n",
+       "C12_23I-DH20H_SIN_Caso2_sTUX_OPF_1_sCDU3y4_sRGM...  626.163574  611.158386   \n",
+       "C12_23I-DH20H_SIN_Caso2Hidro2_sTUX_OPF_1_sCDU3y...  634.965942  619.143188   \n",
+       "C12_23I-DH20H_SIN_Caso4_sTUX_OPF_1_sCDU3y4_sRGM...  657.774292  640.029541   \n",
+       "C12_23I-DH20H_SIN_Caso8_sTUX_OPF_1_sCDU3y4_sRGM...  661.173401  641.277100   \n",
+       "C12_23I-DH20H_SIN_Caso4Hidro2_sTUX_OPF_1_sCDU3y...  667.986755  649.277588   \n",
+       "C12_23I-DH20H_SIN_Caso2_sTUX_OPF_1_sCDU3y4.sav      709.185852  685.133179   \n",
+       "C12_23I-DH20H_SIN_Caso2_sTUX_OPF.sav                713.693176  688.885376   \n",
+       "C12_23I-DH20H_SIN_Caso6_sTUX_OPF_1.sav              714.399170  688.352783   \n",
+       "C12_23I-DH20H_SIN_Caso4Hidro2_sTUX_OPF_1_sCDU3y...  713.489502  689.444946   \n",
+       "C12_23I-DH20H_SIN_Caso4_sTUX_OPF_1.sav              713.793152  689.275818   \n",
+       "C12_23I-DH20H_SIN_Caso6_sTUX_OPF_1_sCDU3y4.sav      714.605408  688.504395   \n",
+       "C12_23I-DH20H_SIN_Caso8_sTUX_OPF_1.sav              714.800293  688.346558   \n",
+       "C12_23I-DH20H_SIN_Caso4_sTUX_OPF_1_sCDU3y4.sav      713.770447  689.555481   \n",
+       "C12_23I-DH20H_SIN_Caso8_sTUX_OPF_1_sCDU3y4.sav      714.842529  688.858582   \n",
+       "\n",
+       "                                                     TR-1 SAL   TR-2 SAL  \\\n",
+       "C12_23I-DH20H_SIN_Caso6_sTUX_OPF_1_sCDU3y4_sRGM...  62.357723  62.357723   \n",
+       "C12_23I-DH20H_SIN_Caso2_sTUX_OPF_1_sCDU3y4_sRGM...  60.413231  60.413231   \n",
+       "C12_23I-DH20H_SIN_Caso2Hidro2_sTUX_OPF_1_sCDU3y...  60.510872  60.510872   \n",
+       "C12_23I-DH20H_SIN_Caso4_sTUX_OPF_1_sCDU3y4_sRGM...  60.966606  60.966606   \n",
+       "C12_23I-DH20H_SIN_Caso8_sTUX_OPF_1_sCDU3y4_sRGM...  62.822670  62.822670   \n",
+       "C12_23I-DH20H_SIN_Caso4Hidro2_sTUX_OPF_1_sCDU3y...  61.110069  61.110069   \n",
+       "C12_23I-DH20H_SIN_Caso2_sTUX_OPF_1_sCDU3y4.sav      63.225018  63.225018   \n",
+       "C12_23I-DH20H_SIN_Caso2_sTUX_OPF.sav                63.246887  63.246887   \n",
+       "C12_23I-DH20H_SIN_Caso6_sTUX_OPF_1.sav              64.632034  64.632034   \n",
+       "C12_23I-DH20H_SIN_Caso4Hidro2_sTUX_OPF_1_sCDU3y...  62.739128  62.739128   \n",
+       "C12_23I-DH20H_SIN_Caso4_sTUX_OPF_1.sav              62.840832  62.840832   \n",
+       "C12_23I-DH20H_SIN_Caso6_sTUX_OPF_1_sCDU3y4.sav      64.732689  64.732689   \n",
+       "C12_23I-DH20H_SIN_Caso8_sTUX_OPF_1.sav              64.881828  64.881828   \n",
+       "C12_23I-DH20H_SIN_Caso4_sTUX_OPF_1_sCDU3y4.sav      62.906273  62.906273   \n",
+       "C12_23I-DH20H_SIN_Caso8_sTUX_OPF_1_sCDU3y4.sav      64.533638  64.533638   \n",
+       "\n",
+       "                                                      TR-1 RAP  ENL SAL-AGS  \n",
+       "C12_23I-DH20H_SIN_Caso6_sTUX_OPF_1_sCDU3y4_sRGM...  239.480804  1234.973511  \n",
+       "C12_23I-DH20H_SIN_Caso2_sTUX_OPF_1_sCDU3y4_sRGM...  243.630005  1237.321960  \n",
+       "C12_23I-DH20H_SIN_Caso2Hidro2_sTUX_OPF_1_sCDU3y...  244.088013  1254.109131  \n",
+       "C12_23I-DH20H_SIN_Caso4_sTUX_OPF_1_sCDU3y4_sRGM...  244.732758  1297.803833  \n",
+       "C12_23I-DH20H_SIN_Caso8_sTUX_OPF_1_sCDU3y4_sRGM...  241.501740  1302.450500  \n",
+       "C12_23I-DH20H_SIN_Caso4Hidro2_sTUX_OPF_1_sCDU3y...  245.149750  1317.264343  \n",
+       "C12_23I-DH20H_SIN_Caso2_sTUX_OPF_1_sCDU3y4.sav      244.207642  1394.319031  \n",
+       "C12_23I-DH20H_SIN_Caso2_sTUX_OPF.sav                245.343262  1402.578552  \n",
+       "C12_23I-DH20H_SIN_Caso6_sTUX_OPF_1.sav              242.601898  1402.751953  \n",
+       "C12_23I-DH20H_SIN_Caso4Hidro2_sTUX_OPF_1_sCDU3y...  245.999878  1402.934448  \n",
+       "C12_23I-DH20H_SIN_Caso4_sTUX_OPF_1.sav              245.888184  1403.068970  \n",
+       "C12_23I-DH20H_SIN_Caso6_sTUX_OPF_1_sCDU3y4.sav      242.552917  1403.109802  \n",
+       "C12_23I-DH20H_SIN_Caso8_sTUX_OPF_1.sav              241.547821  1403.146851  \n",
+       "C12_23I-DH20H_SIN_Caso4_sTUX_OPF_1_sCDU3y4.sav      245.751007  1403.325928  \n",
+       "C12_23I-DH20H_SIN_Caso8_sTUX_OPF_1_sCDU3y4.sav      242.751190  1403.701111  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Ordenando los resultados por el enlace de interés: Ramos Arizpe - Aguascalientes\n",
+    "resultado['ENL SAL-AGS'] = resultado[['RAP - DMD','RAP - SLR']].sum(axis=1)\n",
+    "resultado.sort_values(by=['ENL SAL-AGS'], inplace=True)\n",
+    "resultado"
+   ]
   }
  ],
  "metadata": {
